added textAngular on bower components, added new post view, controller and route with sweet ass motherfucking text editor and shit

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -17,8 +17,8 @@
             </div>
             <!-- Pager -->
             <ul class="pager">
-                <li class="next">
-                    <a href="#">Older Posts &rarr;</a>
+                <li>
+                    <button type="button" class="btn btn-primary btn-lg" ng-click="CreatePost()">New Post</button>
                 </li>
             </ul>
         </div>
