added functionality to create new posts, changed index date field to display creation date

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -11,7 +11,7 @@
                             {{post.subtitle}}
                         </h3>
                     </a>
-                    <p class="post-meta">Posted by <a href="#">{{post.author}}</a> on {{post.creationDate}}</p>
+                    <p class="post-meta">Posted by <a href="#">{{post.author}}</a> on {{post.date}}</p>
                 </div>
                 <hr>
             </div>
