--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -3,7 +3,7 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <div ng-repeat="post in posts">
                 <div class="post-preview">
-                    <a href="post.html">
+                    <a ui-sref='viewPost({postId: post._id})'>
                         <h2 class="post-title">
                             {{post.title}}
                         </h2>
