--- a/client/app/views/newPost.html
+++ b/client/app/views/newPost.html
@@ -12,7 +12,7 @@
                 <input type="text" class="form-control" id="subtitle" ng-model="post.subtitle">
             </div>
             <div class="form-group">
-                <text-angular ng-model="post.content"></text-angular>
+                <text-angular ng-model="post.body"></text-angular>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-lg" ng-click="CreatePost()">Submit</button>
