fixed posted by text position

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -21,7 +21,7 @@
                           </span>
                       </div>
                       <div class="col-md-10 authorContainer">
-                        <p class="align-left">Posted by {{post.author}} {{post.date}}</p>
+                        <p class="post-meta align-left">Posted by {{post.author}} {{post.date}}</p>
                       </div>
 
                     </div>
