--- a/client/app/views/post.html
+++ b/client/app/views/post.html
@@ -4,7 +4,8 @@
             <div class="post-heading">
                 <h1>{{post.title}}</h1>
                 <h2 class="subheading">{{post.subtitle}}</h2>
-                <span class="meta">Posted by {{post.author}} on {{post.date}}</span>
+                <span class="meta">Posted by {{post.author}} {{post.date}}</span>
+                
             </div>
         </div>
     </div>
@@ -14,9 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" ng-bind-html="post.body">
-                
             </div>
         </div>
     </div>
 </article>
-
