added edit post functionality and views

--- a/client/app/styles/style.css
+++ b/client/app/styles/style.css
@@ -1,9 +1,11 @@
 .editButtonContainer{
 	color: #3E5589;
+	cursor: pointer;
 }
 
 .deleteButtonContainer{
 	color:#993A3A;
+	cursor: pointer;
 }
 
 .authorContainer{
