--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -13,7 +13,7 @@
                     </a>
                     <div class="row">
                       <div class="col-md-1">
-                          <span class="editButtonContainer ">
+                          <span class="editButtonContainer" ui-sref='editPost({postId: post._id})'>
                               <i class="fa fa-pencil fa-lg"></i>
                           </span>
                           <span class="deleteButtonContainer ">
