--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,5 +1,9 @@
 <div ng-controller="HomeController">
     <div class="row">
+
+        <input type="text" name="username" ng-model="user.email">
+        <input type="password" name="password" ng-model="user.password">
+        <input type="button" name="login" value="Login" ng-click="login()">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <div ng-repeat="post in posts">
                 <div class="post-preview">
